2001-03-13  Akim Demaille  <akim@epita.fr>

	* tests/tools.at: Be sure to remove configure.ac~.

2001-03-13  Raja R Harinath  <harinath@cs.umn.edu>

	* autoupdate.in (File::Basename): Use package.
	(%ac_macros, %au_macros): Save only base filenames.

2001-03-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_OUTPUT): In the AU_DEFUN definition, don't try
	to issue an obsolete message, it can't work for macros being
	defined both with AC_DEFUN and AU_DEFUN.
	Hence do it in the AC_DEFUN definition.

2001-03-06  Pavel Roskin  <proski@gnu.org>

	* tests/base.at (AC_TRY_*): Escape `^' - it's a pipe command
	separator on Tru64 v5.1.
	Reported by Nicolas Joly.

2001-03-05  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4 (AT_INIT): Register at-setup-line and
	at-check-line for removal.
	Check for the presence of at-check-line only when $at_test was
	really a test.
	Reported by Pavel.

2001-03-04  Pavel Roskin  <proski@gnu.org>

	* tests/atgeneral.m4 (AT_INIT): s/am_me/as_me/. Quote AT_CHECK
	in the error message.

2001-03-02  Pavel Roskin  <proski@gnu.org>

	* acgeneral.m4 (_AC_INIT_PREPARE): Quote `$$*' correctly.

2001-02-28  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4 (AT_INIT): Warn when at-check-line is
	missing.
	* tests/tools.at (Syntax of the scripts): Use AT_CHECK to test
	/bin/sh -n.  Exit 77 on failure.
	Reported by Harlan Stenn.

2001-02-28  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_PREPARE_FS_SEPARATORS): Use `.;.' instead
	of `.;`pwd`': if pwd is c:/foo, we might walk through `.:c'
	(fails), and then `/foo' which might succeed, resulting in
	believing `;' is the right path separator.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AH_VERBATIM, AH_TEMPLATE): New, use AS_ESCAPE, not
	_AS_QUOTE.
	(_AH_VERBATIM_OLD, _AH_TEMPLATE_OLD): New, used for bugward
	compatibility in...
	(AC_DEFINE, AC_DEFINE_UNQUOTED): here.

2001-02-26  Pavel Roskin  <proski@gnu.org>
